--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
   },
   "homepage": "https://github.com/shunchaowang/boilerplate-react#readme",
   "dependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
-  "devDependencies": {
-    "babel": "^6.23.0",
-    "webpack": "^4.2.0"
-  }
+  "devDependencies": {}
 }
