--- a/package.json
+++ b/package.json
@@ -1,33 +1,39 @@
 {
-  "name": "boilerplate-react",
-  "version": "1.0.0",
-  "description": "Boilerplate for react with webpack and babel",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/shunchaowang/boilerplate-react.git"
-  },
-  "keywords": [
-    "react",
-    "webpack",
-    "babel",
-    "node",
-    "npm"
-  ],
-  "author": "Shunchao Wang",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/shunchaowang/boilerplate-react/issues"
-  },
-  "homepage": "https://github.com/shunchaowang/boilerplate-react#readme",
-  "dependencies": {
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
-  },
-  "devDependencies": {}
+    "name": "boilerplate-react",
+    "version": "1.0.0",
+    "description": "Boilerplate for react with webpack and babel",
+    "main": "index.js",
+    "scripts": {
+        "serve": "live-server public/",
+        "build": "webpack",
+        "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/shunchaowang/boilerplate-react.git"
+    },
+    "keywords": [
+        "react",
+        "webpack",
+        "babel",
+        "node",
+        "npm"
+    ],
+    "author": "Shunchao Wang",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/shunchaowang/boilerplate-react/issues"
+    },
+    "homepage": "https://github.com/shunchaowang/boilerplate-react#readme",
+    "dependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-react": "^6.24.1",
+        "live-server": "^1.2.0",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
+        "webpack": "^4.5.0",
+        "webpack-cli": "^2.0.14"
+    },
+    "devDependencies": {}
 }
