Integrated webpack with babel.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "main": "index.js",
     "scripts": {
         "serve": "live-server public/",
-        "build": "webpack",
-        "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react"
+        "build": "webpack --mode development --watch"
     },
     "repository": {
         "type": "git",
@@ -27,6 +26,8 @@
     "homepage": "https://github.com/shunchaowang/boilerplate-react#readme",
     "dependencies": {
         "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.4",
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
         "live-server": "^1.2.0",
