--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "serve": "live-server public/",
-        "build": "webpack --mode development --watch"
+        "build": "webpack --mode production",
+        "dev-server": "webpack-dev-server"
     },
     "repository": {
         "type": "git",
@@ -28,13 +29,15 @@
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.4",
+        "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
         "live-server": "^1.2.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "webpack": "^4.5.0",
-        "webpack-cli": "^2.0.14"
+        "webpack-cli": "^2.0.14",
+        "webpack-dev-server": "^3.1.3"
     },
     "devDependencies": {}
 }
