--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "live-server": "^1.2.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "react-modal": "^3.3.2",
         "webpack": "^4.5.0",
         "webpack-cli": "^2.0.14",
         "webpack-dev-server": "^3.1.3"
