--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
+        "css-loader": "^0.28.11",
         "live-server": "^1.2.0",
+        "node-sass": "^4.8.3",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-modal": "^3.3.2",
+        "sass-loader": "^7.0.1",
+        "style-loader": "^0.20.3",
         "webpack": "^4.5.0",
         "webpack-cli": "^2.0.14",
         "webpack-dev-server": "^3.1.3"
