--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "serve": "live-server public/",
         "build": "webpack --mode production",
-        "dev-server": "webpack-dev-server"
+        "dev-server": "webpack-dev-server --mode development"
     },
     "repository": {
         "type": "git",
