--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     },
     "homepage": "https://github.com/shunchaowang/boilerplate-react#readme",
     "dependencies": {
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
+        "react-modal": "^3.3.2"
+    },
+    "devDependencies": {
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.4",
@@ -35,14 +40,10 @@
         "css-loader": "^0.28.11",
         "live-server": "^1.2.0",
         "node-sass": "^4.8.3",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
-        "react-modal": "^3.3.2",
         "sass-loader": "^7.0.1",
         "style-loader": "^0.20.3",
         "webpack": "^4.5.0",
         "webpack-cli": "^2.0.14",
         "webpack-dev-server": "^3.1.3"
-    },
-    "devDependencies": {}
+    }
 }
