--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "homepage": "https://github.com/shunchaowang/boilerplate-react#readme",
     "dependencies": {
+        "normalize.css": "^8.0.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-modal": "^3.3.2"
