--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "normalize.css": "^8.0.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
-        "react-modal": "^3.3.2"
+        "react-modal": "^3.3.2",
+        "redux": "^4.0.0"
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
